argocd/manifests/wallos/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallos
  labels:
    app.kubernetes.io/name: wallos
    app.kubernetes.io/managed-by: argocd
