argocd/manifests/wallos/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallos
  namespace: wallos
  labels:
    app: wallos
    app.kubernetes.io/name: wallos
spec:
  type: ClusterIP
  selector:
    app: wallos
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
